--- a/www/templates/error-messages.html
+++ b/www/templates/error-messages.html
@@ -2,3 +2,11 @@
   <i class="ion-information-circled"></i>
   This field is required!
 </div>
+<div class="error" ng-message="number">
+  <i class="ion-information-circled"></i>
+  This field must be a number!
+</div>
+<div class="error" ng-message="min"><i class="ion-information-circled"></i>
+  {{field.constraint_message}}</div>
+<div class="error" ng-message="max"><i class="ion-information-circled"></i>
+  {{field.constraint_message}}</div>
