added captions to images

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -150,6 +150,17 @@ Image Modal Style: used for image active-slider when choosing spot images
   top: 0;
 }
 
+.image-modal-textarea {
+  width: 80%;
+  height:10%;
+  bottom: 30;
+  left: 0;
+  margin: auto;
+  overflow: auto;
+  position: fixed;
+  right: 0;
+}
+
 .slider {
   width: 100%;
   height: 100%;
